--- a/gelson/css/style1.css
+++ b/gelson/css/style1.css
@@ -146,6 +146,7 @@ nav a:hover {
 .imagem img {
     width: 100%;
     height: 570px;
+    opacity: 50%;
 
 }
 .text {
@@ -158,7 +159,7 @@ nav a:hover {
 }
 .text p {
     font-size: 50px;
-    color: rgba(59, 169, 204, 0.44);
+    color: rgba(3, 4, 6, 0.74);
     text-align: center;
     line-height: 80px;
     font-weight: 970;
