--- a/gelson/css/style1.css
+++ b/gelson/css/style1.css
@@ -145,10 +145,11 @@ nav a:hover {
 /*Background com a imagem*/
 .imagem img {
     width: 100%;
-    height: 570px;
-    opacity: 50%;
+    height: 500px;
+    
 
 }
+/*
 .text {
     display: flex;
     margin: auto;
@@ -168,7 +169,7 @@ nav a:hover {
     color: red;
 }
 
-/*Textos nos background da imagem*/
+*/
 
 
 
@@ -201,6 +202,15 @@ nav a:hover {
     font-size: 16.8px;
     line-height: 24px;
 }
+.fundo {
+	background-color: black;
+}
+.black {
+	color: white;
+}
+.ano {
+	color: red;
+}
 
 /*Deixando as imagens responsivas para aumentar no tamanho maximo
 do container*/
@@ -229,9 +239,11 @@ img {
 }
 
 .titulo-produtos {
+	display: flex;
     font-family: "Titillium Web", sans-serif;
     font-size: 13px;
     margin-top: 13px;
+    flex-wrap: wrap;
     text-transform: uppercase;
     text-align: center;
     justify-content: center;
@@ -242,12 +254,16 @@ img {
     flex-wrap: wrap;
     font-family: "Titillium Web", sans-serif;
     font-size: 12px;
+    text-align: center;
     justify-content: center;
     line-height: 13px;
     padding: 0;
     margin-bottom: 3px;
 
     color: #595959;
+}
+.produto-cor {
+	color: white;
 }
 
 /*Rodapé*/
@@ -342,13 +358,9 @@ img {
     }
 
     .text p {
-        position: relative;
-        top: -100px;
-        margin-top:25px;
-        font-size: 30px;
-        line-height: 25px;
-        padding: 8px;
-        color: black;
+    
+        font-size: 0;
+    
     }
 
     .flex {
